--- a/index.html
+++ b/index.html
@@ -1,14 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <!-- header -->
-  <header>
-    <h3>G3 Archites</h3>
-  </header>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Artchites-web</title>
+    <link rel="stylesheet" href="./style/style.css" />
+  </head>
+  <body>
+    <!-- header -->
+    <header>
+      <nav>
+        <h3 class="section-title">G3 Archites</h3>
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Contact</a></li>
+          <li><a href="">Login</a></li>
+        </ul>
+      </nav>
+      <!-- banner -->
+      <div class="banner">
+        <div class="banner-content">
+          <h1 class="banner-title">
+            Brand New <br />
+            Group Artchites
+          </h1>
+          <p class="text-light-gray">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            <br />
+            humour, or randomised words which don't look even
+          </p>
+          <button class="btn-primary">Explore More</button>
+        </div>
+        <img src="./images/banner.png" alt="" />
+      </div>
+    </header>
+    <!-- header-end -->
+    <main>
+      <!-- team  aection start -->
+      <section class="teams-container">
+        <div class="teams-img-container">
+          <img src="./images/team1.png" alt="" />
+          <img src="./images/team2.png" alt="" />
+          <img src="./images/team3.png" alt="" />
+          <img src="./images/team4.png" alt="" />
+        </div>
+        <div class="teams-content">
+          <h3 class="teams-title">
+            <span class="text-light-gray">Quick list</span> <span>of Our</span>
+            <span class="text-features">Features</span>
+          </h3>
+          <p class="text-light-gray">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button class="btn-primary">Explore More</button>
+        </div>
+      </section>
+      <!--features section  -->
+      <section class="features">
+        <div class="feature-content">
+          <h3 class="section-title ">Features you will <br> love & enjoy</h3>
+          <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+          <div class="card">
+            <h4>Dexktop & Mobile Version</h4>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+          </div>
+          <div class="card">
+            <h4>Drag & Drop Builder</h4>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+          </div>
+          <div class="card">
+            <h4>Awesome Modern Design</h4>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+          </div>
+          <div class="card">
+            <h4>Awesome Modern Design</h4>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+          </div>
+            
+          </div>
+        </div>
+        <div class="feature-img">
+          <img src="./images/architect.png" alt="">
+          <div class="ten-year-badge">
+            <h2>10+ years</h2>
+            <p>Experience</p>
+          </div>
+        </div>
+      </section>
+
+      <!-- fact section -->
+      <section class="facts">
+        <h3 class="section-title">Some Facts</h3>
+        <p class="text-light-gray">
+          There are many variations of passages of Lorem Ipsum available, <br />
+          but the majority have suffered alteration.
+        </p>
+        <div class="facts-card-container">
+          <div class="card">
+            <img src="./images/icons/ribon.png" alt="" />
+            <h2 class="card-starts">54</h2>
+            <p class="card-title text-light-gray">Awards Winnings</p>
+          </div>
+          <div class="card">
+            <img src="./images/icons/projects.png" alt="" />
+            <h2 class="card-starts">1458</h2>
+            <p class="card-title text-light-gray">Project Finished</p>
+          </div>
+          <div class="card">
+            <img src="./images/icons/customers.png" alt="" />
+            <h2 class="card-starts">590</h2>
+            <p class="card-title text-light-gray">Clients Worked</p>
+          </div>
+          <div class="card">
+            <img src="./images/icons/email.png" alt="" />
+            <h2 class="card-starts">22578</h2>
+            <p class="card-title text-light-gray">Email Send</p>
+          </div>
+        </div>
+      </section>
+      <!-- sponsors section -->
+      <section class="sponsors">
+        <h3 class="section-title">Our Sponsors</h3>
+        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        <div class="sponsors-img-container">
+          <img src="./images/sponsors/spotify.png" alt="">
+          <img src="./images/sponsors/amazon.png" alt="">
+          <img src="./images/sponsors/telerama.png" alt="">
+          <img src="./images/sponsors/figma.png" alt="">
+        </div>
+        
+      </section>
+    </main>
+    <footer class="footer">
+      <p class="text-light-gray">All rights reserved copyright@2023 startup landing page design</p>
+    </footer>
+
+  </body>
 </html>
